# lsd-deep-agent-assistants

./: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml
notebooks/: assistant_test.ipynb
src/assistants/content-writer/: AGENTS.md
src/assistants/cowboy/: AGENTS.md
src/assistants/mcp-docs-agent/: AGENTS.md
src/assistants/pirate/: AGENTS.md
src/deep_agent/: agent.py  context.py  tools.py
src/deep_research/: agent.py
src/deep_research/research_agent/: __init__.py  prompts.py  tools.py
