[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lsd-deep-agent-assistants"
version = "0.1.0"
description = "LangChain Agent + React UI served via LangSmith Deployments custom routes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.4.11",
    "langchain-mcp-adapters>=0.3.0",
    "fastapi>=0.135.1",
    "langchain>=1.2.13",
    "langchain-anthropic>=1.4.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=0.3.0",
    "langgraph-cli[inmem]>=0.4.18",
    "PyJWT>=2.8.0",
    "rich>=13.0.0",
    "yfinance>=0.2.0",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
